# config

./: .gitignore  CMakeLists.txt  README.md  main.c
config/: config.c  config.h  list.c  nvs.c  nvs.h
file_system/: README.md
